--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,8 @@
     "no-console": "off",
     "class-methods-use-this": "off",
     "prettier/prettier": "error",
-    "camelcase": "off"
+    "camelcase": "off",
+    "import/prefer-default-export": "off"
   },
   "settings": {
     "import/resolver": {
