--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,9 +2,12 @@
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
-  "username": "docker",
-  "password": "postgres",
+  "username": "postgres",
+  "password": "docker",
   "database": "clients_dashboard",
+  "entities": [
+    "./src/models/*.ts"
+  ],
   "migrations": [
     "./src/database/migrations/*.ts"
   ],
